[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/QueryStart/QueryStart.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/DatabaseView/DatabaseView.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/popup_errors.gd" type="Script" id=3]
[ext_resource path="res://scenes/ReportEntry/report_entry.gd" type="Script" id=4]

[node name="ReportEntry" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="QueryStart" parent="." instance=ExtResource( 1 )]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 307.0
margin_top = 265.0
margin_right = 697.0
margin_bottom = 490.0
script = ExtResource( 3 )

[node name="DatabaseView" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EditDatabase" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -381.0
margin_top = 125.0
margin_right = -247.0
margin_bottom = 174.0
text = "Edit/View Database"

[connection signal="pressed" from="EditDatabase" to="." method="_on_EditDatabase_pressed"]
